--- a/KI207-projekat/src/main/resources/static/css/login.css
+++ b/KI207-projekat/src/main/resources/static/css/login.css
@@ -12,8 +12,8 @@
     padding: 30px 38px 66px;
     margin: 0 auto;
     background-color: #e9e3ba;
-    border: 5px solid #bbb;
-    border-radius: 15px;
+    border: 2px solid #3e3e26;
+    border-radius: 30px;
   }
 
 .form-signin-heading {
@@ -38,4 +38,24 @@ input[type="password"] {
   margin-bottom: 20px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+html{
+  position:relative; 
+  min-height: 100%;
+}
+/*Normalize html and body elements,this style is just good to have*/
+html,body{
+  margin:0;
+  padding:0;
+}
+.pageContentWrapper{
+  margin-bottom:100px;/* Height of footer*/
+} 
+.footer{
+    position: absolute;
+    bottom: 0;
+    left: 250px;
+    right: 0;
+    height:30px;
+    background:#ffffff;
 }
