Verzija - nedelja podne

--- a/KI207-projekat/src/main/resources/templates/index.html
+++ b/KI207-projekat/src/main/resources/templates/index.html
@@ -14,89 +14,20 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/css/page.css">
 
-<style>
-.body {
-	font-family: "Lato", sans-serif;
-}
 
-/* Fixed sidenav, full height */
-.sidenav {
-	height: 100%;
-	width: 200px;
-	position: fixed;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	background-color: #e9e3ba;
-	overflow-x: hidden;
-	padding-top: 20px;
-}
 
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-	padding: 6px 8px 6px 16px;
-	text-decoration: none;
-	font-size: 20px;
-	color: #000000;
-	display: block;
-	border: none;
-	background: none;
-	width: 100%;
-	text-align: left;
-	cursor: pointer;
-	outline: none;
-}
-
-/* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
-	color: #f1f1f1;
-}
-
-/* Main content */
-.main {
-	margin-left: 200px; /* Same as the width of the sidenav */
-	font-size: 20px; /* Increased text to enable scrolling */
-	padding: 0px 10px;
-}
-
-/* Add an active class to the active dropdown button */
-.active {
-	background-color: green;
-	color: white;
-}
-
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-	display: none;
-	background-color: #262626;
-	padding-left: 8px;
-}
-
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-	float: right;
-	padding-right: 8px;
-}
-
-/* Some media queries for responsiveness */
-@media screen and (max-height: 450px) {
-	.sidenav {
-		padding-top: 15px;
-	}
-	.sidenav a {
-		font-size: 18px;
-	}
-}
-</style>
 </head>
 <body>
+
 <div class="pageContentWrapper">
 	<div class="sidenav">
 		<a href="/index">Home</a> 
 		<a href="/login">Login</a> 
 		<a href="/registracija">Registracija</a>
 	</div>
+
 
 
 	<div class="container">
@@ -114,11 +45,11 @@
 				class="img-responsive center-block" width="550" height="280"
 				alt="ChronoHeader" />
 		</div>
+</div>
 
 		
 		<!-- footer -->
-	</div>
-	</div>
+	
 	<div class="footer">
 	<footer id="main-footer" class="row">
 			<p>Copyright&copy; Metropolitan VMV Team</p>
