--- a/KI207-projekat/src/main/resources/templates/registracija.html
+++ b/KI207-projekat/src/main/resources/templates/registracija.html
@@ -2,147 +2,87 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Registration Form</title>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<title>Registration Form</title>
+<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<style>
-.body {
-	font-family: "Lato", sans-serif;
-}
-
-/* Fixed sidenav, full height */
-.sidenav {
-	height: 100%;
-	width: 200px;
-	position: fixed;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	background-color: #e9e3ba;
-	overflow-x: hidden;
-	padding-top: 20px;
-}
-
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-	padding: 6px 8px 6px 16px;
-	text-decoration: none;
-	font-size: 20px;
-	color: #000000;
-	display: block;
-	border: none;
-	background: none;
-	width: 100%;
-	text-align: left;
-	cursor: pointer;
-	outline: none;
-}
-
-/* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
-	color: #f1f1f1;
-}
-
-/* Main content */
-.main {
-	margin-left: 200px; /* Same as the width of the sidenav */
-	font-size: 20px; /* Increased text to enable scrolling */
-	padding: 0px 10px;
-}
-
-/* Add an active class to the active dropdown button */
-.active {
-	background-color: green;
-	color: white;
-}
-
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-	display: none;
-	background-color: #262626;
-	padding-left: 8px;
-}
-
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-	float: right;
-	padding-right: 8px;
-}
-
-/* Some media queries for responsiveness */
-@media screen and (max-height: 450px) {
-	.sidenav {
-		padding-top: 15px;
-	}
-	.sidenav a {
-		font-size: 18px;
-	}
-}
-</style>
+<link rel="stylesheet" href="/css/page.css">
 </head>
-<body>
-	<div class="sidenav">
-		<a href="/index">Home</a> 
-		<a href="/login">Login</a> 
-		<a href="/registracija">Registracija</a>
-	</div>
-	
-	<div class="container">
-		<img th:src="@{/images/header.jpg}" class="img-responsive center-block" 
-			width="" height="" alt="ChronoHeader" />
-		<div class="col-md-4 col-md-offset-4">
-			<form autocomplete="off" action="#" th:action="@{/registracija}"
-				th:object="${user}" method="post" class="form-horizontal"
-				role="form">
-				<div class="center"><h2>Forma za registraciju</h2></div>				
-				<div class="form-group">
-					<label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
-							class="validation-message"></label>
-					<input type="text" th:field="*{firstName}" placeholder="Ime"
-							class="form-control" /> 
-				</div>
 
-				<div class="form-group">
-					<label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
-							class="validation-message"></label>
-						<input type="text" th:field="*{lastName}"
-							placeholder="Prezime" class="form-control" /> 
-				</div>
-				<div class="form-group">
-					<label	th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"
-							class="validation-message"></label>
-						<input type="text" th:field="*{userName}"
-							placeholder="Korisnicko ime" class="form-control" /> 
-				</div>
-				<div class="form-group">
+<body>
+	<div class="pageContentWrapper">
+		
+		<div class="sidenav">
+			<a href="/index">Home</a> <a href="/login">Login</a> <a
+				href="/registracija">Registracija</a>
+		</div>
+
+		<div class="container">
+			<img th:src="@{/images/header.jpg}"
+				class="img-responsive center-block" width="" height=""
+				alt="ChronoHeader" />
+			<div class="col-md-4 col-md-offset-4">
+				<form autocomplete="off" action="#" th:action="@{/registracija}"
+					th:object="${user}" method="post" class="form-horizontal"
+					role="form">
+					<div class="center">
+						<h2>Forma za registraciju</h2>
+					</div>
+					<div class="form-group">
+						<label th:if="${#fields.hasErrors('firstName')}"
+							th:errors="*{firstName}" class="validation-message"></label> <input
+							type="text" th:field="*{firstName}" placeholder="Ime"
+							class="form-control" />
+					</div>
+
+					<div class="form-group">
+						<label th:if="${#fields.hasErrors('lastName')}"
+							th:errors="*{lastName}" class="validation-message"></label> <input
+							type="text" th:field="*{lastName}" placeholder="Prezime"
+							class="form-control" />
+					</div>
+					<div class="form-group">
+						<label th:if="${#fields.hasErrors('userName')}"
+							th:errors="*{userName}" class="validation-message"></label> <input
+							type="text" th:field="*{userName}" placeholder="Korisnicko ime"
+							class="form-control" />
+					</div>
+					<div class="form-group">
 						<input type="text" th:field="*{email}" placeholder="Email"
 							class="form-control" /> <label
 							th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
 							class="validation-message"></label>
-				</div>
-				<div class="form-group">
+					</div>
+					<div class="form-group">
 						<input type="password" th:field="*{password}"
 							placeholder="Password" class="form-control" /> <label
 							th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
 							class="validation-message"></label>
-				</div>
-
-				<div class="form-group">
-					<div class="">
-						<button type="submit" class="btn btn-primary btn-block">Registracija korisnika</button>
 					</div>
-				</div>
-				
-				<span th:utext="${successMessage}"></span>
-				
-			</form>
-		</div>
-		
-	</div>
 
+					<div class="form-group">
+						<div class="">
+							<button type="submit" class="btn btn-primary btn-block">Registracija
+								korisnika</button>
+						</div>
+					</div>
+
+					<span th:utext="${successMessage}"></span>
+
+				</form>
+			</div>
+
+		</div>
+		<div class="footer">
+			<footer id="main-footer" class="row">
+				<p>Copyright&copy; Metropolitan VMV Team</p>
+			</footer>
+		</div>
+	</div>
 </body>
 </html>
